exports[`test the manage button handling an onclick event 1`] = `
<div
  className="gCyDJO">
  <img
    className="hYnxrf"
    icon="" />
  <div
    className="kCluph" />
  <div
    className="cvZscS">
    yoast.com
  </div>
  <div
    className="kNFhXP">
    <div>
      <div
        aria-label="Yoast SEO"
        className="iGaMkb" />
      <div
        aria-label="Local SEO"
        className="pfOfD" />
      <div
        aria-label="Video SEO"
        className="cQWrFq" />
      <div
        aria-label="News SEO"
        className="favXdg" />
      <div
        aria-label="WooCommerce SEO"
        className="bEJBwK" />
      <div
        aria-label="Local SEO for Woo"
        className="dRReah" />
    </div>
  </div>
  <button
    className="kgcbkl"
    onClick={[Function]}
    type="button">
    Manage
  </button>
</div>
`;

exports[`test the manage button handling an onclick event 2`] = `
<div
  className="gCyDJO">
  <img
    className="hYnxrf"
    icon="" />
  <div
    className="kCluph" />
  <div
    className="cvZscS">
    yoast.com
  </div>
  <div
    className="kNFhXP">
    <div>
      <div
        aria-label="Yoast SEO"
        className="iGaMkb" />
      <div
        aria-label="Local SEO"
        className="pfOfD" />
      <div
        aria-label="Video SEO"
        className="cQWrFq" />
      <div
        aria-label="News SEO"
        className="favXdg" />
      <div
        aria-label="WooCommerce SEO"
        className="bEJBwK" />
      <div
        aria-label="Local SEO for Woo"
        className="dRReah" />
    </div>
  </div>
  <button
    className="kgcbkl"
    onClick={[Function]}
    type="button">
    Manage
  </button>
</div>
`;

exports[`test the site component matches the snapshot 1`] = `
<div
  className="gCyDJO">
  <img
    className="hYnxrf"
    icon="" />
  <div
    className="kCluph" />
  <div
    className="cvZscS">
    yoast.com
  </div>
  <div
    className="kNFhXP">
    <div>
      <div
        aria-label="Yoast SEO"
        className="iGaMkb" />
      <div
        aria-label="Local SEO"
        className="pfOfD" />
      <div
        aria-label="Video SEO"
        className="cQWrFq" />
      <div
        aria-label="News SEO"
        className="favXdg" />
      <div
        aria-label="WooCommerce SEO"
        className="bEJBwK" />
      <div
        aria-label="Local SEO for Woo"
        className="dRReah" />
    </div>
  </div>
  <button
    className="kgcbkl"
    onClick={undefined}
    type="button">
    Manage
  </button>
</div>
`;
